--- a/package.json
+++ b/package.json
@@ -35,11 +35,12 @@
         "dayjs": "^1.11.13",
         "element-plus": "^2.8.3",
         "intl": "^1.2.5",
+        "maska": "^3.0.2",
         "moment": "^2.29.4",
         "qrcode": "^1.5.3",
         "qrcode-terminal": "^0.12.0",
         "simplebar-vue": "^2.3.3",
-        "v-mask": "^2.3.0",
+        "vue-3-mask": "^0.0.1-alpha",
         "vue-chartjs": "^5.2.0",
         "vue-cropperjs": "^5.0.0",
         "vue-qrcode-reader": "^5.5.8",
